--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     height: 100vh;
   }
 .container {
-    padding: 20px 0px 20px 0;
+    padding: 10px 0px 10px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,11 +18,12 @@
     border:20px solid black;
     border-radius: 40px;
     width: 80%;
+    gap:1em;
     
 }
 .drop-zone {
     max-width: 400px;
-    height: 400px;
+    height: 300px;
     padding: 25px;
     display: flex;
     align-items: center;
@@ -47,7 +48,7 @@
   
   .drop-zone__thumb {
     width: 400px;
-    height: 400px;
+    height: 300px;
     border-radius: 10px;
     overflow: hidden;
     background-color:  var(--secondary-color);
@@ -68,4 +69,38 @@
     font-size: 14px;
     text-align: center;
   }
+
+  .final_result{
+    width: 400px;
+    height: 300px;
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    cursor: pointer;
+    color: #cccccc;
+    border: 4px solid var(--primary-color);
+    border-radius: 10px;
+
+  }
+
+
+path{
+  stroke-dasharray: 6982.1943359375;
+  stroke-dashoffset: 6982.1943359375;
+  animation: LineAnimation 5s ease forwards;
+  animation-delay: 1s;
+}
+
+@keyframes LineAnimation{
+  to{
+      stroke-dashoffset: 0px;
+  }
+}
+
+
   
